ecmascript/parser/tests/typescript-errors/decorators/type-arguments-invalid/input.ts.stderr
error: Expected LParen, got Some(Word(class))
 --> $DIR/tests/typescript-errors/decorators/type-arguments-invalid/input.ts:2:1
  |
2 | class Test {}
  | ^^^^^

